# yt_transcribe

./: .gitignore  PRD.md  analysis.md  task.md  test-integration.py
.claude/: settings.local.json
backend/: .env.example  .mypy.ini  .pre-commit-config.yaml  README.md  alembic.ini  cleanup_incomplete_jobs.py  main.py  pyproject.toml  quick_setup.py  reset_stalled_jobs.py  run.py  simple_db_init.py  start.sh  test_config.py  test_import.py  test_server.py  test_transcription.py  test_youtube_api.py  update_db_schema.py
backend/alembic/: env.py
backend/alembic/versions/: 29adaa37815c_initial_migration_create_channels_.py  7096919a99ce_update_channel_model_with_additional_.py  c461b8bb3e3f_initial_migration.py  f3d30d28e8c4_add_additional_youtube_channel_fields.py
backend/app/: models.py
backend/app/api/: main.py
backend/app/api/routes/: __init__.py  channels.py  health.py  notes.py  transcription.py  transcription_jobs.py  videos.py
backend/app/core/: config.py  simple_config.py
backend/app/db/: base.py  init_db.py  models.py
backend/app/domains/channels/: models.py  services.py
backend/app/domains/transcription_jobs/: models.py
backend/app/domains/videos/: models.py  services.py
backend/app/services/: channel_service.py  transcription_service.py  video_service.py  youtube_api.py
backend/docs/: youtube-api-integration.md  youtube-api-quick-reference.md
backend/tests/integration/: test_youtube_api_integration.py
backend/tests/services/: test_video_discovery.py  test_youtube_api.py
frontend/: .env.example  .prettierignore  eslint.config.js  index.html  package.json  test-frontend.cjs
frontend/src/: App.tsx  index.css  main.tsx
todos/: project-description.md  todos.md
todos/done/: 2025-07-28-10-51-52-install-python-youtube-api-client-analysis.md  2025-07-28-10-51-52-install-python-youtube-api-client.md  2025-07-28-17-19-19-youtube-api-setup-analysis.md  2025-07-28-17-19-19-youtube-api-setup.md  2025-07-28-18-06-14-video-discovery-backend.md  (+5 more)
(+34 files in other folders)
